[project]
name = "admin-proc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "google-api-python-client>=2.187.0",
    "ipykernel>=7.1.0",
    "japanize-matplotlib>=1.1.3",
    "langchain>=1.0.8",
    "langchain-google-genai>=3.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "matplotlib>=3.10.7",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "scipy>=1.15.3",
]
